# asbestos

./: .gitignore  Cargo.toml  README.md  TODO.md
asbestos/: Cargo.toml
asbestos/src/: lib.rs
asbestos_cli/: Cargo.toml
asbestos_cli/src/: main.rs
asbestos_payload/: Cargo.toml
asbestos_payload/src/: lib.rs  missing_from_winapi.rs  util.rs  vfs.rs
asbestos_payload/src/hooks/: file.rs  mod.rs  ntdll.rs  process.rs
asbestos_payload/tests/: vfs.rs
asbestos_shared/: Cargo.toml
asbestos_shared/src/: lib.rs  protocol.rs  protocol_macros.rs
src/: lib.rs  main.rs  shared.rs  util.rs
src/hooks/: file.rs
