[package]
name = "asbestos_cli"
version = "0.1.0"
authors = ["Markus Røyset <maroider@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asbestos = { path = "../asbestos" }
ctrlc = "3.1.4"
serde_json = "1.0.51"
structopt = "0.3.13"
syringe = { git = "https://github.com/maroider/syringe", rev = "ef94577" }
