[package]
name = "asbestos_shared"
version = "0.1.0"
authors = ["Markus Røyset <maroider@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.2.1"
named_pipe = "0.4.1"
serde = { version = "1.0.106", features = ["derive"] }
